# fork-task-runner-c

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  quality.yml  security.yml
docs/: INDEX.md  arquitetura.md  auditoria-prontidao-academica.md  controle-de-regressao.md  estrategia-de-testes.md  guia-de-uso-open-source.md  pesquisa-abnt.md  publicacao-e-redes.md  referencias.md  regras-de-negocio.md
docs/academico/: README.md  fork-task-runner-abnt.html
docs/auditoria-funcionamento/: README.md
docs/auditoria-funcionamento/evidencias/: 01-build-test.txt  02-cli-help.txt  03-cli-version.txt  04-success-run.txt  05-failure-timeout-run.txt  06-invalid-file.txt  07-install.txt
docs/research/: repository-radar.md
examples/: tasks.failure-timeout.txt  tasks.sample.txt
include/ftr/: event_stack.h  process_list.h  process_runner.h  scheduler.h  task.h  task_loader.h  task_queue.h  terminal_dashboard.h
scripts/: check-code-health.sh  run-functional-audit.sh
src/: main.c
src/application/: scheduler.c
src/domain/: task.c
src/infrastructure/: process_runner.c  task_loader.c
src/presentation/: terminal_dashboard.c
src/structures/: event_stack.c  process_list.c  task_queue.c
tests/: test_macros.h
tests/fixtures/: tasks-comments-only.txt  tasks-invalid-timeout.txt  tasks-malformed.txt  tasks-success.txt
tests/integration/: test_scheduler.c
tests/unit/: test_structures.c  test_task_loader.c
